<resources>
    <string name="app_name">SimpleCalendar</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="btnPrevMonth">Prev</string>
    <string name="btnNextMonth">Next</string>
    <string name="field_inputNote">Note</string>
    <string name="field_note1">note: </string>
    <string name="btnAddNote">Add note</string>
    <string name="monthName">month</string>
    <string name="btnShowNotes">show notes</string>
    <string name="tvAmount">Amount of notes:</string>
    <string name="btnBack">Back</string>
    <string name="removeButton">remove</string>
    <string name="aid_currentDate">Note for: </string>
    <item type="id" name="btnRemove" />
    <item type="id" name="btnRemoveNumber" />
</resources>
