<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="by.bsu.simplecalendar.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnPrevMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPrevMonth"
            android:gravity="start"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/btnNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNextMonth"
            android:gravity="start"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/textView_MonthName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/monthName"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/monthLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:layout_weight="1"
            android:layout_gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/calendar_week_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7" />

    <LinearLayout
        android:id="@+id/calendar_week_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7" />

    <LinearLayout
        android:id="@+id/calendar_week_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7" />

    <LinearLayout
        android:id="@+id/calendar_week_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7" />

    <LinearLayout
        android:id="@+id/calendar_week_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7" />

    <LinearLayout
        android:id="@+id/calendar_week_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7" >

    </LinearLayout>

</LinearLayout>
